[metadata]
name = ResuMe
version = 0.0.1
author = Ishita Kabra
author_email = ishitakabra1805@gmail.com
description = Generate and deploy beautiful websites in under 5 minuites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ishita1805/ResuME
project_urls =
    Bug Tracker = https://github.com/ishita1805/ResuME/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src